# TFM_entrega

./: .gitignore  README.md  operator_playbook.json  pyproject.toml
code/src/: langgraph.json  main.py
code/src/pentest_orchestrator/: __init__.py  analysis.py  capabilities.py  cli.py  config.py  executor.py  graph.py  hypotheses.py  local_env.py  metasploit.py  modes.py  observability.py  pdf.py  planning.py  playbook.py  policy.py  prompts.py  recon.py  recorder.py  reporting.py  routing.py  schemas.py  scope.py  state.py  tools.py  validation.py  vulnerability_catalog.py
tests/: test_analysis.py  test_audit.py  test_capabilities.py  test_config.py  test_executor.py  test_graph_state.py  test_hypotheses.py  test_local_env.py  test_modes.py  test_observability.py  test_openai_provider.py  test_pdf.py  test_planning.py  test_playbook.py  test_policy.py  test_recon.py  test_routing.py  test_schemas.py  test_scope.py  test_tools.py  test_validation.py  test_vulnerability_catalog.py
